# brownfield-cartographer

./: .gitattributes  .gitignore  README.md  main.py  pyproject.toml
.github/: copilot-instructions.md
cartography-artifacts/airflow/: lineage_graph.json
cartography-artifacts/jaffle-shop/: CODEBASE.md  analysis_summary.md  cartography_trace.jsonl  lineage_graph.json  module_graph.json  module_graph_networkx.html  onboarding_brief.md  semanticist_trace.json
cartography-artifacts/jaffle-shop/semantic_index/: dbt_project.yml.json  manifest.json  models__customers.sql.json  models__orders.sql.json  models__schema.yml.json  models__staging__schema.yml.json  models__staging__stg_customers.sql.json  models__staging__stg_orders.sql.json  models__staging__stg_payments.sql.json
cartography-artifacts/jaffle_shop/: analysis_summary.md  lineage_graph.json  module_graph.json
cartography-artifacts/ol-data-platform/: CODEBASE.md  analysis_summary.md  cartography_trace.jsonl  lineage_graph.json  module_graph.json  onboarding_brief.md  semanticist_trace.json
cartography-artifacts/ol-data-platform/semantic_index/: bin__dbt-create-staging-models.py.json  bin__dbt-local-dev.py.json  bin__utils__chunk_tracking_logs_by_day.py.json  bin__uv-operations.py.json  build.yaml.json  dg_deployments__local__dagster.yaml.json  dg_deployments__local__workspace.yaml.json  dg_deployments__reconcile_edxorg_partitions.py.json  dg_projects____init__.py.json  (+1097 more)
src/: cli.py
src/agents/: archivist.py
src/analyzers/: tree_sitter_analyzer.py
src/models/: __init__.py
web/: index.html
